# astranis

./: CMakeLists.txt  constantReference.csv  constantReferenceNoise.csv  sinusoidReference.csv  sinusoidReferenceNoise.csv
include/utils/: controlUtils.h  sensorUtils.h  simUtils.h
simulation/: main.cpp
src/: CMakeLists.txt
src/utils/: controlUtils.cpp  sensorUtils.cpp  simUtils.cpp
